--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,24 +11,31 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+INCLUDE_DIRECTORIES(../IntonCoreBin/install/include)
+
 # QtCreator supports the following variables for Android, which are identical to qmake Android variables.
 # Check http://doc.qt.io/qt-5/deployment-android.html for more information.
 # They need to be set before the find_package(Qt5 ...) call.
 
-#if(ANDROID)
-#    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
-#    if (ANDROID_ABI STREQUAL "armeabi-v7a")
+if(ANDROID)
+    LINK_DIRECTORIES(../IntonCoreBin/install/lib_android)
+    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
+
+    if (ANDROID_ABI STREQUAL "armeabi-v7a")
+        set(ANDROID_EXTRA_LIBS ${CMAKE_CURRENT_SOURCE_DIR}/../IntonCoreBin/install/lib_android/libIntonCore.so)
 #        set(ANDROID_EXTRA_LIBS
 #            ${CMAKE_CURRENT_SOURCE_DIR}/path/to/libcrypto.so
 #            ${CMAKE_CURRENT_SOURCE_DIR}/path/to/libssl.so)
-#    endif()
-#endif()
+    endif()
+else()
+    LINK_DIRECTORIES(../IntonCoreBin/install/lib)
+endif()
 
-find_package(Qt5 COMPONENTS Core Quick QuickControls2 Widgets Charts LinguistTools Multimedia MultimediaWidgets REQUIRED)
-
-INCLUDE_DIRECTORIES(../IntonCoreBin/install/include)
-LINK_DIRECTORIES(../IntonCoreBin/install/lib)
-
+if(ANDROID)
+    find_package(Qt5 COMPONENTS Core Quick QuickControls2 Widgets Charts LinguistTools Multimedia MultimediaWidgets AndroidExtras REQUIRED)
+else()
+    find_package(Qt5 COMPONENTS Core Quick QuickControls2 Widgets Charts LinguistTools Multimedia MultimediaWidgets REQUIRED)
+endif()
 
 set(TS_FILES SpeechRateMeter_en_US.ts)
 
@@ -73,7 +80,14 @@ endif()
 
 target_compile_definitions(SpeechRateMeter
   PRIVATE $<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:QT_QML_DEBUG>)
-target_link_libraries(SpeechRateMeter
-  PRIVATE IntonCore Qt5::Core Qt5::Quick Qt5::QuickControls2 Qt5::Widgets Qt5::Charts Qt5::Multimedia Qt5::MultimediaWidgets)
+
+if(ANDROID)
+    target_link_libraries(SpeechRateMeter
+      PRIVATE IntonCore Qt5::Core Qt5::Quick Qt5::QuickControls2 Qt5::Widgets Qt5::Charts Qt5::Multimedia Qt5::MultimediaWidgets Qt5::AndroidExtras)
+else()
+    target_link_libraries(SpeechRateMeter
+      PRIVATE IntonCore Qt5::Core Qt5::Quick Qt5::QuickControls2 Qt5::Widgets Qt5::Charts Qt5::Multimedia Qt5::MultimediaWidgets)
+endif()
+
 
 qt5_create_translation(QM_FILES ${CMAKE_SOURCE_DIR} ${TS_FILES})
